--- a/client/src/css/coach.module.css
+++ b/client/src/css/coach.module.css
@@ -10,6 +10,7 @@ ul {
   left: 0;
   right: 0;
   position: absolute;
+
 }
 
 .coachTitle {
@@ -23,17 +24,19 @@ ul {
   margin-bottom: 50px;
   overflow-y: auto;
   color: white;
+  width: auto;
 }
 
 .chatMessageContainer {
   display: flex;
   align-items: center;
   margin-top: 16px;
-  margin-bottom: 16px;
+  margin-bottom: 30px;
 }
 
 .userAvatar {
   background-color: white;
+  margin-right: 10px;
   width: 40px;
   height: 40px;
 }
@@ -42,10 +45,32 @@ ul {
   background-color: rgb(4, 246, 61);
   width: 40px;
   height: 40px;
+  /* margin-top: 17px; */
+  margin-right: 10px;
+  align-self: flex-start;
+  background-image: url("../img/terminator.jpg");
+  background-position: center;
+  background-size:cover;
+  
 }
 
 .message {
-  padding: 0 30px;
+  padding: 10px 30px 10px 30px;
+  border-radius: 10px;
+  left:40px;
+  position: relative;
+  background-color: gray;
+}
+
+.message:before {
+   content:"";
+   position: absolute;
+
+   height: 0;
+   border-top: 13px solid transparent;
+   border-right: 50px solid gray;
+   border-bottom: 25px solid transparent;
+   margin: -6px 0 0 -55px;
 
 }
 
