--- a/client/src/css/navfooter.css
+++ b/client/src/css/navfooter.css
@@ -9,6 +9,15 @@ img {
   background-color: #2b2b2b;
 }
 
+.footer {
+  height: 100px;
+  width: 100%;
+  padding: 18px;
+  position: fixed;
+  background-color: #2b2b2b;
+  justify-content: space-between;
+}
+
 .navbar {
   height: 100px;
   background-color: #2b2b2b;
@@ -28,7 +37,7 @@ img {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
-.nav-dropdown{
+.nav-dropdown {
   background-color: inherit;
 }
 
