--- a/client/src/css/home.module.css
+++ b/client/src/css/home.module.css
@@ -47,3 +47,24 @@
 .progressBtn {
   margin-top: 30px;
 }
+
+@media (max-width: 767px) {
+  html,
+  body {
+    height: auto;
+    margin-bottom: 80px;
+  }
+  
+  .cardWrapper {
+    height: 100%;
+    border-radius: 10px;
+    max-width: 1000px;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    margin-top: 80px;
+  }
+}
