--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   margin: auto;
-  margin-top: 140px;
+  margin-top: 160px;
 }
 
 .container-fluid {
@@ -17,6 +17,7 @@
 }
 
 .exerciseCard {
+  width: 100%;
   margin: 20px 0px;
   border-radius: 10px;
   margin-bottom: 50px;
@@ -41,4 +42,25 @@
 .anExercise {
   border: 2px dashed red ;
   border-radius: 10px;
+}
+
+@media (max-width: 767px) {
+  html,
+  body {
+    height: auto;
+    margin-bottom: 80px;
+  }
+  
+  .fitnessContainer {
+    height: 100%;
+    max-width: 1000px;
+    border-radius: 10px;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    margin-top: 80px;
+  }
 }
