--- a/client/src/css/calendar.module.css
+++ b/client/src/css/calendar.module.css
@@ -12,9 +12,13 @@ h4 {
 }
 
 .calendarCard {
+  height: 100%;
   width: 100%;
-  margin-bottom: 50px;
+  max-width: 1400px;
+  margin-top: 160px;
   border-radius: 10px;
+  text-align: center;
+  background-color: #d4d4d4;
 }
 
 .calendarContainer {
