--- a/client/src/css/profile.module.css
+++ b/client/src/css/profile.module.css
@@ -33,6 +33,7 @@
   height: 100%;
   width: 100%;
   max-width: 1400px;
+  margin-top: 160px;
   border-radius: 10px;
   text-align: center;
   background-color: #2b2b2b;
