Added media queries for Profile page

--- a/client/src/css/profile.module.css
+++ b/client/src/css/profile.module.css
@@ -91,4 +91,14 @@
   body {
     height: auto;
   }
+
+  .profileCard {
+    height: 100%;
+    width: 100%;
+    max-width: 1400px;
+    margin-top: 80px;
+    border-radius: 10px;
+    text-align: center;
+    background-color: #2b2b2b;
+  }
 }
