--- a/client/src/css/home.module.css
+++ b/client/src/css/home.module.css
@@ -26,6 +26,16 @@
   margin-bottom: 20px;
 }
 
+.listCard {
+  width: 100%;
+  border-radius: 10px;
+  text-align: center;
+  background-color: #2b2b2b;
+  margin-top: 40px;
+  margin-bottom: 30px;
+  color: white;
+}
+
 .progressHeader {
   text-align: center;
   color: white;
@@ -38,6 +48,7 @@
   text-align: center;
   background-color: #2b2b2b;
   margin-bottom: 30px;
+  color: white;
 }
 
 .progressBar {
