--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -21,6 +21,8 @@
   margin: 20px 0px;
   border-radius: 10px;
   margin-bottom: 50px;
+  background-color: #2b2b2b;
+  color: white;
 }
 
 .fitnessCardBody {
