--- a/client/src/css/signupDetails.module.css
+++ b/client/src/css/signupDetails.module.css
@@ -1,53 +1,72 @@
+.signupDetailsBody{
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  font-family: "Varela Round", sans-serif;
+  background-image: url("../img/abstract.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: fixed;
+  overflow: scroll;
+}
+
 #submitBtn {
-  padding-top: 20px;
+  padding: 10px !important;
   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.685);
   border: none;
   border-radius: 10px;
   transition: 0.2s;
-  width: 100%;
+  width: 300px;
   justify-content: center;
+  background-color: rgb(92, 208, 216);
+  margin-top: 12px;
+}
+
+#submitBtn:hover {
+  background-color: hsl(184, 62%, 73%);
 }
 
 #signupDetails {
-  padding: 0 75px 30px 75px;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 40px 40px 40px;
 }
 
 #signupDetails > input {
   display: flex;
   align-items: center;
-  padding: 10px;
+  padding: 7px;
 }
 
-#detailsLabel {
+#detailsHeader {
+  color: white;
+  margin-top: 30px;
   font-size: 30pt;
-  /* padding: 20px; */
+  font-weight: bold;
 }
 
 #activityLevel {
-  margin: 25px 0 20px 0;
+  /* margin: 12px 0 20px 0; */
   padding: 10px;
   background-color: white;
 }
 
 #fitnessGoals {
-  margin: 5px 0 20px 0;
+  /* margin: 12px 0 20px 0; */
   padding: 10px;
   background-color: white;
-}
-
-.detailsContainer {
-  height: 100%;
-  border-radius: 10px;
-  display: flex;
-  justify-self: center;
-  justify-content: center;
 }
 
 .radioInput {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 5%;
+  width: 250px;
+  
 }
 
 input[type="radio"] {
@@ -60,7 +79,10 @@ input[type="radio"] {
 }
 
 .userInput {
-  border: none;
-  border-bottom: solid 1px black;
-  width: 100%;
+  border: 2px solid #c0c0c0;
+  width: 300px;
+  justify-content: center;
+  border-radius: 10px;
+  margin: 12px;
+  
 }
