Added animations to inputs on signup page

--- a/client/src/css/signup.module.css
+++ b/client/src/css/signup.module.css
@@ -78,12 +78,48 @@
   width: 300px;
   justify-content: center;
   border-radius: 10px;
-  margin: 12px;
+  margin: 15px;
 }
 
 .userInput:focus {
   outline: solid rgb(129, 126, 126) 2px;
 }
+
+.inputName{
+  color: gray;
+  position: relative;
+  bottom: 50px;
+  right: 100px;
+  transition: all 0.3s ease;
+  display: inline-block;
+}
+.emailPlaceholder{
+  right: 110px;
+}
+
+.inputLabel{
+  height: 0;
+}
+
+.userInput:focus + .inputLabel .inputName,
+.userInput:valid + .inputLabel .inputName {
+  transform: translateY(-165%);
+  font-size: 15px;
+  right: 110px;
+  color: rgb(92, 208, 216);
+  outline: none;
+}
+
+.userInput:focus + .inputLabel .emailPlaceholder,
+.userInput:valid + .inputLabel .emailPlaceholder {
+  transform: translateY(-165%);
+  font-size: 15px;
+  right: 120px;
+  color: rgb(92, 208, 216);
+  outline: none;
+}
+
+
 
 @media (max-width: 767px) {
   html,
