--- a/client/src/css/leaderboard.module.css
+++ b/client/src/css/leaderboard.module.css
@@ -1,10 +1,3 @@
-tr {
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-}
-
-th {
-  background-color: #d4d4d4;
-}
 
 table {
   width: 100%;
@@ -15,9 +8,19 @@ table {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
-th,
+tr {
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+
+th {
+  color: black;
+  padding: 10px;
+  text-align: center;
+  background-color: #d4d4d4;
+}
+
 td {
-  color: white;
+  color: rgb(92, 208, 216);
   padding: 10px;
   text-align: center;
 }
@@ -54,9 +57,29 @@ td img {
 }
 
 .ranksHeader {
-  color: white;
+  color: rgb(92, 208, 216);
   text-align: center;
   margin-top: 20px;
+}
+
+.button {
+  padding: 10px 20px;
+  margin: 0px 10px;
+  background-color: #e9e9e9;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.button.active {
+  background-color: #333;
+  color: #fff;
+}
+
+.tabs {
+  display: flex;
+  justify-content: center;
+  margin: 10px 10px 16px 10px;
 }
 
 @media (max-width: 767px) {
