Created new modal component, modal working now

--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -46,6 +46,11 @@
   border-radius: 10px;
 }
 
+.modalImage {
+  height: 500px;
+  width: 500px;
+}
+
 @media (max-width: 767px) {
   html,
   body {
