--- a/client/src/css/home.module.css
+++ b/client/src/css/home.module.css
@@ -26,9 +26,12 @@
   margin-bottom: 20px;
 }
 
+.username {
+  color: rgb(92, 208, 216);
+}
 .progressHeader {
   text-align: center;
-  color: white;
+  color: rgb(92, 208, 216);
   margin-top: 20px;
 }
 
@@ -40,13 +43,27 @@
   margin-bottom: 30px;
 }
 
-.progressBar {
-  width: 100%;
+.progressBarContainer{
+  margin: 0 100px;
 }
 
 .progressBtn {
   margin-top: 30px;
+  background-color: hsl(184, 61%, 40%);
+  border: none;
 }
+
+.progressBtn:hover {
+  background-color: hsl(184, 61%, 60%);
+  border: none;
+  outline: none;
+}
+
+.progressBtn:active, .progressBtn:focus  {
+  background-color: hsl(184, 61%, 70%);
+  box-shadow: 0px 0px 3px 3px hsl(184, 57%, 28%);
+}
+
 
 @media (max-width: 767px) {
   html,
