--- a/client/src/css/leaderboard.module.css
+++ b/client/src/css/leaderboard.module.css
@@ -34,6 +34,22 @@ td img {
   margin-right: 10px;
 }
 
+.button {
+  padding: 10px 20px;
+  margin: 0px 10px;
+  background-color: #e9e9e9;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: 0.1s;
+}
+
+.button.active {
+  background-color: #dddcdc;
+  /* color:rgb(92, 208, 216); */
+  box-shadow: inset 0px 0px 9px 1px #222222;
+}
+
 .cardWrapper {
   height: 100%;
   max-width: 1000px;
@@ -45,6 +61,10 @@ td img {
   align-items: center;
   margin: auto;
   margin-top: 160px;
+}
+
+.formLabel {
+  color: black;
 }
 
 .ranksCard {
@@ -61,23 +81,6 @@ td img {
   margin-top: 20px;
 }
 
-.button {
-  padding: 10px 20px;
-  margin: 0px 10px;
-  background-color: #e9e9e9;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: 0.1s;
-}
-
-
-.button.active {
- background-color: #dddcdc;
-  /* color:rgb(92, 208, 216); */
-  box-shadow: inset 0px 0px 9px 1px #222222;
-}
-
 .tabs {
   display: flex;
   justify-content: center;
@@ -90,27 +93,14 @@ td img {
   text-decoration: none;
 }
 
-.modal {
-  margin-top: 20px;
-}
-
-.modalHeader,
-.modalBody {
-  color: white;
-}
-
 .modalBtn {
-  padding: 4px 20px;
-  margin: 0px 10px;
-  color: white;
-  background-color: #2b2b2b;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+  background-color: rgb(92, 208, 216);
+  border-color: rgb(92, 208, 216);
 }
 
 .modalBtn:hover {
-  background-color: #949494;
+  color: black;
+  background-color: hsl(184, 62%, 73%);
 }
 
 @media (max-width: 767px) {
