--- a/client/src/css/about.module.css
+++ b/client/src/css/about.module.css
@@ -2,7 +2,7 @@
   height: 100%;
   width: 100%;
   margin: 0;
-  font-family: "Varela Round", sans-serif;
+  font-family: 'Quicksand', sans-serif;
   background-image: url("../img/abstract.png");
   background-size: cover;
   background-position: center;
@@ -12,10 +12,11 @@
 }
 
 .aboutHeader {
-  color: white;
-  margin-top: 30px;
-  font-size: 30pt;
-  font-weight: bold;
+  color: black;
+  font-size: 4em;
+  text-align: center;
+  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff,
+    0 0 70px #fff, 0 0 80px #fff, 0 0 100px #fff, 0 0 150px #fff;
 }
 
 .aboutDescription {
