--- a/client/src/css/password.module.css
+++ b/client/src/css/password.module.css
@@ -2,7 +2,7 @@
   height: 100%;
   width: 100%;
   margin: 0;
-  font-family: "Varela Round", sans-serif;
+  font-family: 'Quicksand', sans-serif;
   background-image: url("../img/abstract.png");
   background-size: cover;
   background-position: center;
