--- a/client/src/css/coach.module.css
+++ b/client/src/css/coach.module.css
@@ -4,6 +4,19 @@ ul {
   padding: 0;
 }
 
+.modalBtn {
+  margin-top: 10px;
+  margin-bottom: 16px;
+  background-color: rgb(92, 208, 216);
+  border-color: rgb(92, 208, 216);
+}
+
+.modalBtn:hover {
+  color: black;
+  background-color: hsl(184, 62%, 73%);
+  border-color: hsl(184, 62%, 73%);
+}
+
 .coach {
   top: 0;
   bottom: 0;
@@ -32,6 +45,15 @@ ul {
   align-items: center;
   margin-top: 16px;
   margin-bottom: 30px;
+}
+
+.formLabel {
+  color: black;
+}
+
+.modalBody {
+  color: black;
+  text-align: center;
 }
 
 .userAvatar {
