Minor updates to CSS on signupDetails

--- a/client/src/css/signupDetails.module.css
+++ b/client/src/css/signupDetails.module.css
@@ -1,8 +1,8 @@
-.signupDetailsBody{
+.signupDetailsBody {
   height: 100%;
   width: 100%;
   margin: 0;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   background-image: url("../img/abstract.png");
   background-size: cover;
   background-position: center;
@@ -65,12 +65,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 250px;
-  
+  /* width: 100px; */
 }
 
 input[type="radio"] {
-  transform: scale(1.25);
+  transition: ease-in-out 0.5s;
+  width: 17px;
+  height: 17px;
+}
+
+input[type="radio"]:checked {
+  border-color: rgb(92, 208, 216);
+  background-color: rgb(92, 208, 216);
 }
 
 .signupCard {
@@ -83,6 +89,40 @@ input[type="radio"] {
   width: 300px;
   justify-content: center;
   border-radius: 10px;
-  margin: 12px;
-  
+  margin: 15px;
+}
+
+.inputName{
+  color: gray;
+  position: relative;
+  bottom: 48px;
+  right: 100px;
+  transition: 0.2s;
+  display: inline-block;
+}
+
+.agePlaceholder {
+  right: 128px;
+}
+
+.inputLabel{
+  height: 0;
+}
+
+.userInput:focus + .inputLabel .inputName,
+.userInput:valid + .inputLabel .inputName {
+  transform: translateY(-150%);
+  font-size: 15px;
+  right: 105px;
+  color: rgb(92, 208, 216);
+  outline: none;
+}
+
+.userInput:focus + .inputLabel .agePlaceholder,
+.userInput:valid + .inputLabel .agePlaceholder {
+  transform: translateY(-150%);
+  font-size: 15px;
+  right: 129px;
+  color: rgb(92, 208, 216);
+  outline: none;
 }
