--- a/client/src/css/home.module.css
+++ b/client/src/css/home.module.css
@@ -71,6 +71,11 @@
   box-shadow: 0px 0px 3px 3px hsl(184, 57%, 28%);
 }
 
+
+.exerciseDate{
+  font-size: 19pt;
+  color: rgb(92, 208, 216);
+}
 .draggableList{
   padding: 30px 0;
 }
