--- a/client/src/css/home.module.css
+++ b/client/src/css/home.module.css
@@ -11,6 +11,16 @@
   margin-top: 160px;
 }
 
+.challengeCard {
+  height: 100%;
+  width: 100%;
+  color: white;
+  border-radius: 10px;
+  text-align: center;
+  margin-bottom: 30px;
+  background-color: #2b2b2b;
+}
+
 .homeCard {
   height: 100%;
   width: 100%;
