--- a/client/src/css/home.module.css
+++ b/client/src/css/home.module.css
@@ -21,6 +21,11 @@
   background-color: #2b2b2b;
 }
 
+.challengeHeader {
+  text-align: center;
+  color: rgb(92, 208, 216);
+}
+
 .homeCard {
   height: 100%;
   width: 100%;
