--- a/client/src/css/settings.module.css
+++ b/client/src/css/settings.module.css
@@ -1,6 +1,24 @@
 .settingsBtn {
   margin-top: 12px;
   margin-bottom: 12px;
+  background-color: rgb(92, 208, 216);
+  border: none;
+  transition: 0.1s;
+}
+
+.settingsBtn:hover {
+  background-color: hsl(184, 62%, 67%);
+}
+
+.settingsBtn:focus {
+  background-color: hsl(184, 62%, 77%);
+  border: none;
+  box-shadow: 0 0 3px 2px rgb(92, 208, 216);
+  transition: 0.1s;
+}
+
+.settingsBtn:active {
+  box-shadow: 0 0 2px 4px hsl(184, 61%, 40%) !important;
 }
 
 .settingsCard {
@@ -26,6 +44,17 @@
 
 .settings input {
   margin-left: 16px;
+  border: none;
+}
+
+.settings input:checked{
+  background-color: rgb(92, 208, 216);
+}
+
+.settings input:focus {
+  border: none;
+  box-shadow: 0 0 4px 4px hsl(184, 61%, 40%);
+  color: green;
 }
 
 .settings label {
@@ -35,4 +64,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.settingsHeader{
+  color: rgb(92, 208, 216);
 }
