Adjusted styling for settings labels and button placements

--- a/client/src/css/settings.module.css
+++ b/client/src/css/settings.module.css
@@ -1,5 +1,9 @@
+.remindersInput {
+  margin-right: 28px;
+}
+
 .settingsBtn {
-  margin-top: 12px;
+  margin-top: 40px;
   margin-bottom: 12px;
   background-color: rgb(92, 208, 216);
   border: none;
@@ -21,7 +25,7 @@
   box-shadow: 0 0 2px 4px hsl(184, 61%, 40%) !important;
 }
 
-.settingsBtn:disabled{
+.settingsBtn:disabled {
   background-color: hsl(184, 62%, 77%);
 }
 
@@ -43,15 +47,15 @@
 }
 
 .settings h1 {
-  margin-bottom: 24px;
+  margin-bottom: 40px;
 }
 
 .settings input {
-  margin-left: 16px;
+  margin-left: 0px;
   border: none;
 }
 
-.settings input:checked{
+.settings input:checked {
   background-color: rgb(92, 208, 216);
 }
 
@@ -63,12 +67,17 @@
 
 .settings label {
   font-size: 1.15rem;
-  font-weight: bold;
   margin-bottom: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.settingsHeader{
+
+.settingsHeader {
   color: rgb(92, 208, 216);
+}
+
+.toggleDiv {
+  text-align: left;
+  /* margin-left: 10px; */
 }
