--- a/client/src/css/diet.module.css
+++ b/client/src/css/diet.module.css
@@ -20,9 +20,7 @@ button, .button{
   background-color: hsl(183.87deg 60.78% 40%);
   color: white;
   border: none;
-}
-button{
-  border-radius: 10px;
+  margin: 5px;
 }
 
 button:hover,.button:hover {
@@ -36,6 +34,16 @@ button:active,
 button:focus {
   background-color: hsl(184, 61%, 70%);
   box-shadow: 0px 0px 3px 3px hsl(184, 57%, 28%);
+}
+
+.loading {
+  display: flex;
+  align-items: center;
+}
+.loading p {
+margin-top: 0;
+margin-bottom: 0;
+margin-right: 10px;
 }
 
 .title {
