--- a/client/src/css/index.module.css
+++ b/client/src/css/index.module.css
@@ -7,6 +7,7 @@
   background-position: center;
   background-repeat: no-repeat;
   position: fixed;
+  overflow: auto;
 
 }
 
@@ -26,8 +27,8 @@
 }
 
 .indexImage {
-  height: 100%;
-  width: 100%;
+  height: 75%;
+  width: 75%;
   margin-top: 100px;
 }
 
@@ -58,4 +59,11 @@
   body {
     height: auto;
   }
+
+
+  .indexImage {
+    height: 100%;
+    width: 100%;
+  }
 }
+
