--- a/client/src/css/diet.module.css
+++ b/client/src/css/diet.module.css
@@ -16,7 +16,6 @@
   top: 10rem;
 }
 
-button,
 .button {
   background-color: hsl(183.87deg 60.78% 40%);
   color: white;
@@ -24,7 +23,6 @@ button,
   margin: 5px;
 }
 
-button:hover,
 .button:hover {
   background-color: hsl(184, 61%, 60%);
   border: none;
@@ -32,8 +30,8 @@ button:hover,
   color: white;
 }
 
-button:active,
-button:focus {
+.button:active,
+.button:focus {
   background-color: hsl(184, 61%, 70%);
   box-shadow: 0px 0px 3px 3px hsl(184, 57%, 28%);
 }
