changed colour of buttons

--- a/client/src/css/password.module.css
+++ b/client/src/css/password.module.css
@@ -63,6 +63,9 @@
   text-decoration: none;
   color: rgb(69, 182, 148);
 }
+.signupLink:hover {
+  color:rgb(144, 213, 192);
+ }
 
 .userInput {
   border: 2px solid #c0c0c0;
