--- a/client/src/css/index.module.css
+++ b/client/src/css/index.module.css
@@ -11,13 +11,15 @@
 }
 
 .indexBtn {
-  margin: 4px 12px 36px 12px;
+  margin: 4px 12px 36px 0;
   background-color: #2b2b2b;
   border-color: #2b2b2b;
 }
 
+
 .indexBtn:hover {
   background-color: #95a4a9;
+  border: #2b2b2b;
 }
 
 .indexCard {
