fixed fitness.jsx ui

--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -9,6 +9,9 @@
   align-items: center;
   margin: auto;
   margin-top: 160px;
+
+  background-color: #2b2b2b;
+  color: white;
 }
 
 .container-fluid {
