changed diet css for mobile to conform with others

--- a/client/src/css/diet.module.css
+++ b/client/src/css/diet.module.css
@@ -85,6 +85,11 @@
     height: 100%;
   }
 
+  .fitnessContainer {
+    padding: 0;
+    margin-top: 80px;
+  }
+
   .exerciseCard {
     top: 1rem;
   }
