--- a/client/src/css/index.module.css
+++ b/client/src/css/index.module.css
@@ -13,12 +13,18 @@
 .indexBtn {
   margin: 4px 12px 36px 0;
   background-color: #2b2b2b;
-  border-color: #2b2b2b;
+  border: 1px solid #2b2b2b;
 }
 
 .indexBtn:hover {
   background-color: #95a4a9;
-  border: #2b2b2b;
+  border: 1px solid #2b2b2b;
+}
+
+.indexBtn:active {
+  background-color: hsl(195, 10%, 72%);
+  border: 1px solid #2b2b2b;
+  box-shadow: 0 0 1px 2px #95a4a9;
 }
 
 .indexCard {
@@ -34,37 +40,39 @@
 .imageContainer {
   height: 100%;
   width: 100%;
-
   z-index: -2;
-
-  right: -200px;
+  right: -550px;
   bottom: -44px;
   position: absolute;
+  opacity: 75%;
 }
 
 .indexTitle {
+  color: rgb(255, 255, 255);
+  max-width: 800px;
   margin-top: 60px;
   margin-bottom: 60px;
   font-weight: bold;
-}
-
-.indexBody h1 {
-  color: rgb(255, 255, 255);
-  max-width: 1000px;
   font-size: 4rem;
-  text-align: left;
+  text-align: center;
 }
 
-.indexBody h4 {
+.indexDescription {
   color: white;
-  max-width: 1000px;
+  max-width: 800px;
   margin-top: 60px;
   font-weight: bold;
   text-align: left;
-  text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+  /* text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black; */
 }
-h4 + div {
-  text-align: left;
+
+.indexDescription + div {
+  /* text-align: left; */
+  max-width: 800px;
+}
+
+.signupOrLogin{
+  max-width: 800px;
 }
 
 @media (max-width: 767px) {
@@ -82,7 +90,7 @@ h4 + div {
     right: 0;
     bottom: 0;
     padding: 0;
-    opacity: 50%;
+    opacity: 30%;
   }
 
   .indexBody h1 {
